<resources>

    <string name="button_artista">ARTISTA</string>
    <string name="button_locale">LOCALE</string>
    <string name="button_fan">FAN</string>

    <string-array name="Musica">
        <item>TRAP</item>
        <item>RAP</item>
        <item>HOUSE</item>
        <item>HIPOP</item>
        <item>ROCK</item>
        <item>REGUETON</item>
        <item>POP</item>
        <item>BACHATA</item>
    </string-array>

    <string-array name="orario_ap">
        <item>  17</item>
        <item>  18</item>
        <item>  19</item>
        <item>  20</item>
        <item>  21</item>
        <item>  22</item>
        <item>  23</item>
        <item>  24</item>
        <item>  1</item>
        <item>  2</item>
    </string-array>
    <string-array name="orario_ch">
        <item>24</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="orario2">
        <item>00</item>
        <item>30</item>
    </string-array>


    <string name="app_name">NextLive</string>
    <string name="input_email">e-mail</string>
    <string name="accedi_login">Accedi</string>
    <string name="registrati_link">Registrati, è gratis!</string>
    <string name="password_link">Hai dimenticato la password?</string>
    <string name="input_password">password</string>
    <string name="nome_applicazione">NextLive</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="password">Password:</string>
    <string name="nuova_password">Nuova Password:</string>
    <string name="conferma_nuova_password">Conferma Nuova Password:</string>
    <string name="conferma">Conferma</string>
    <string name="home">Home</string>
    <string name="crea_evento">Crea Evento</string>
    <string name="nome_utente">Nome_Utente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_eventi">EventiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data">dd/mm/yyyy</string>
    <string name="titolo_candidatura">Candidature</string>


</resources>