<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sfondo_grigio"
    tools:context = ".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_return"
        app:theme="@style/ToolbarColoredBackArrow">

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo"
            android:text="@string/modifica_password"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/toolbar_return"
            app:layout_constraintEnd_toStartOf="@+id/toolbar_return"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="579dp"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_return"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_modifica"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textColor="@color/white"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextTextPassword10"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:ems="10"
                tools:ignore="LabelFor"
                android:textColor="@color/white"
                android:backgroundTint="@color/suddivisione_grigio"
                android:inputType="textPassword"
                android:autofillHints=""
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nuova_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textColor="@color/white"
                android:text="@string/nuova_password" />

            <EditText
                android:id="@+id/editTextTextPassword11"
                android:layout_width="170dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                tools:ignore="LabelFor"
                android:textColor="@color/white"
                android:backgroundTint="@color/suddivisione_grigio"
                android:inputType="textPassword"
                android:autofillHints=""
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/re_nuova_pwd"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aclonica"
                android:textColor="@color/white"
                android:text="@string/conferma_nuova_password" />

            <EditText
                android:id="@+id/editTextTextPassword12"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:ems="10"
                tools:ignore="LabelFor"
                android:textColor="@color/white"
                android:backgroundTint="@color/suddivisione_grigio"
                android:inputType="textPassword"
                android:autofillHints=""
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:background="@drawable/button_style"
            android:id="@+id/btnConferma_pwd"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/conferma" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>